# HIWM

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.zeabur  NOTICE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPSTREAM.md  build_cuda128.sh  docker-compose.yml  install.py  package.json  pyproject.toml  requirements-zeabur.txt  run_docker_cuda128.sh  zbpack.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy-docs.yml
config/: chat_with_hiwm_mac.yaml  chat_with_hiwm_zeabur.yaml  chat_with_openai_compatible_bailian_cosyvoice_flashhead.yaml  chat_with_openai_compatible_bailian_cosyvoice_flashhead_duplex_agent.yaml  chat_with_openai_compatible_bailian_cosyvoice_musetalk.yaml  chat_with_openai_compatible_bailian_cosyvoice_musetalk_duplex.yaml  chat_with_qwen_omni_mac.yaml
coturn-data/: turnserver.conf
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guides/: api-v1.md  hiwm-runtime.md  macos-setup.md  project-architecture.zh-CN.md
docs/reports/: acceptance-2026-07-18.zh-CN.md  acceptance-2026-07-19-v0.2.zh-CN.md
docs/research/: hiwm-definition.zh-CN.md  hiwm-demo-design.zh-CN.md
docs/upstream/: README.md
frontend/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.web.json  vite.config.ts
frontend/docs/: extending-avatar-renderer.md
frontend/tests/: avatar-visual-readiness.test.ts  evidence-streams.test.ts  hiwm-replay-evidence.test.ts  hiwm-session-deletion.test.ts  media-permission-timeout.test.ts  perception-store.test.ts  profile-store.test.ts  project-storage-migration.test.ts  remote-audio-playback.test.ts  rtc-signaling.test.ts  runtime-key-readiness.test.ts  transcript-highlight.test.ts  webrtc-readiness.test.ts
scripts/: download_avatar_model.py  download_models.py  download_musetalk_weights.sh  download_smart_turn_weights.sh  setup_coturn.sh  setup_macos.sh  smoke_cloud.py  start_macos.sh  start_zeabur.sh  supervise_macos.py
src/: demo.py  project_identity.py
src/chat_engine/: chat_engine.py
src/engine_utils/: directory_info.py  interval_counter.py  media_utils.py  text_filter.py
tests/: test_project_identity.py
tests/chat_engine/: test_client_perception.py  test_handler_manager_redaction.py
tests/handlers/: test_client_profile.py
tests/hiwm/: __init__.py  fixtures.py  test_camera.py  test_cancellation_scope.py  test_client_perception_metadata.py  test_execution.py  test_ledger.py  test_models.py  test_planner.py  test_playback.py  test_safety_boundary.py  test_slow_stream_lifecycle.py  test_world_model.py
tests/rtc_client/: test_client_observation_channel.py  test_connection_cleanup.py  test_playback_lifecycle.py
tests/scripts/: test_env_file_permissions.py  test_smoke_cloud_permissions.py  test_supervise_macos.py
tests/security/: __init__.py  test_backend_log_privacy_canary.py  test_handler_config_redaction.py  test_logger_sink_policy.py
tests/service/: test_api_config.py  test_frontend_service.py  test_health_endpoints.py  test_hiwm_replay.py  test_robot_action_api.py  (+2 more)
(+182 files in other folders)
